# ImmersiveRigging

./: README.md  _pull.bat  _push.bat  _push_before_major_changes.bat  _push_major_changes.bat  _push_tiny_changes.bat  _push_totest.bat
bkp/: IHasBoundingBox.cxx  Init.cxx  Mesh.h  Skeleton.h  SkinnedMeshViewer.h  config.def  math_helper.h
docs/: addi_notes.txt  addi_notes_and_design.txt  addi_notes_for_presentation.txt  cgv_research_proj.ppt  mixed.txt  paper_writting.txt  research_project_Zhongyuan_Yu.potx  vorlage-cgv-2018-normalformat.potx  ~$Immersive Rigging and Skinning in Virtual Reality Environments.pptx
exec/: config.def  run.bat
pics/: cgv_research_proj.odp
proj/: Animation.cxx  Animation.h  AnimationFrameBone.h  AtomicTransform.cxx  AtomicTransform.h  Bone.cxx  Bone.h  BoxGui.h  CMakeLists.txt  DataStore.cxx  DataStore.h  IHasBoundingBox.cxx  IHasBoundingBox.h  IKViewer.cxx  Mesh.cxx  Mesh.h  Skeleton.cxx  Skeleton.h  SkeletonViewer.h  animation.cxx  animation.pj  animation_frame_bone.h  atomic_transform.cxx  bone.cxx  boxgui.h  common.h  config.def  datastore.h  define_resource_dir.bat  ik_viewer.cxx  ik_viewer.h  intersection.h  math_helper.h  mesh.cxx  mesh.h  skeleton.h  skeleton_viewer.cxx  skeleton_viewer.h  skinned_mesh_viewer.cxx  skinned_mesh_viewer.h  (+5 more)
proj/exec/ex5-binSolution/: run.bat
proj/exec/ex5-binSolution/glsl/: skinning.glfs  skinning.glgs  sphere.glpr
proj/exec/exec_vr_rigging/: config.def
proj/glsl/: skinning.glgs
proj_bkp/: Animation.h  Bone.h  IKViewer.cxx  IKViewer.h  Mesh.cxx  SkeletonViewer.cxx  vr_test.cxx
(+87 files in other folders)
